# IslandsLib

./: LICENCE.rst  MarieGalante.py  README.rst  pyproject.toml
.beampy_cache_Intro/: svgout_4ul10i74.pklz  svgout_oxb0_4cf.pklz  svgout_qmo3gezv.pklz  svgout_unciki4a.pklz  svgout_vcw_1w43.pklz
.github/workflows/: documentation.yml
IslandsLib/: Classes.py  FEM.py  IGN.py  Misc.py  __init__.py
data/Contours/Atlantic/Guadeloupe/: Desirade.txt  Grande_Terre.txt  Marie_Galante.txt  Saintes_Terre_Haut.txt
data/Contours/Atlantic/Leeward_Islands/: Barbuda_full.txt
data/Contours/Guadeloupe/: Desirade.txt  Saintes_Grand_Ilet.txt  Saintes_Ilet_à_Cabrit.txt  Saintes_Terre_Bas.txt
data/Contours/Indian/Mayotte/: Mayotte_Petite_Terre_dziani.txt
data/Contours/Leeward_Islands/: Barbuda_small.txt
data/Contours/Mayotte/: Mayotte_Petite_Terre.txt
data/Contours/Pacific/New_Caledonia/: Loyaute_Lifou_328631.txt  Loyaute_Mare_85035.txt  (+5 more)
data/Examples/: MysteryIsland.txt  MysteryLake.txt
docs/: Directory.rst  Install.rst  Introduction.rst  Lib.rst  Samples.rst  conf.py  index.rst  references.bib  requirements.txt  sync
docs/source/: ContoursIGN.rst  Contributors.rst  Directory.rst  Install.rst  Introduction.rst  Issues.rst  Lib.rst  RealIslands (conflicted copy 2025-07-24 230810).rst  RealIslands.rst  Samples.rst  Tutorial.rst  Why IslandsLib.rst  conf.py  index.rst  references.bib  todo.rst
examples/: Desirade.py  ExtractContourDesirade.py  IslandWithLake.py  LensWithRiver.py  Mayotte_Petite_Terre.py  SimpleLens.py  SimpleLensRainField.py  SimpleLensRainVar.py
(+69 files in other folders)
