[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "IslandsLib"
version = "0.0.1"
authors = [
  { name="François Métivier", email="metivier@ipgp.fr" },
]
description = "a package to model freshwater lenses of small islands"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC BY-SA 4.0"
license-files = ["LICENCE.rst"]

[project.urls]
Homepage = "https://github.com/fmetivier/IslandsLib"
Documentation = "https://morpho.ipgp.fr/IslandsLib"
Issues = "https://github.com/fmetivier/IslandsLib/issues"